# Veles

./: .gitignore  Cargo.toml  INSTALL.md  README.md  RELEASING.md  USAGE.md  dist-workspace.toml
.github/workflows/: ci.yml  publish-crates.yml  release.yml
crates/veles-cli/: Cargo.toml  README.md
crates/veles-cli/src/: cli.rs  format.rs  handlers.rs  main.rs  output.rs  util.rs
crates/veles-cli/src/tui/: app.rs  mod.rs  search.rs  ui.rs
crates/veles-core/: Cargo.toml  README.md
crates/veles-core/examples/: bm25_compare.rs
crates/veles-core/src/: cache.rs  lib.rs  model.rs  persist.rs  scope.rs  symbols.rs  tokenizer.rs  types.rs  veles_index.rs  walker.rs
crates/veles-core/src/index/: dense.rs  mod.rs  search.rs  sparse.rs  topk.rs
crates/veles-core/src/ranking/: boosting.rs  penalties.rs
crates/veles-grpc/: Cargo.toml  README.md  build.rs
crates/veles-grpc/src/: lib.rs
crates/veles-mcp/: Cargo.toml  README.md
crates/veles-mcp/src/: lib.rs
