[package]
name = "veles-grpc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "gRPC service for Veles code search"

[dependencies]
veles-core = { workspace = true }
model2vec-rs = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
anyhow = { workspace = true }
# Bundles a prebuilt `protoc` for the host platform so users don't need
# the protobuf compiler installed system-wide to `cargo install` this
# crate. The vendored binary is set as the `PROTOC` env var in build.rs.
protoc-bin-vendored = "3"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
